# Object-oriented-analysis-and-design-2

lab01/: README.md
lab01/WindowManagerApp/: Program.cs  WindowManagerApp.http  WindowManagerApp.sln
lab01/WindowManagerApp/Controllers/: WindowController.cs
lab01/WindowManagerApp/Models/: Window.cs
lab01/WindowManagerApp/Properties/: launchSettings.json
lab01/WindowManagerApp/wwwroot/: index.html
lab01/WindowManagerSingleton/: Program.cs  WindowManagerSingleton.http  WindowManagerSingleton.sln
lab01/WindowManagerSingleton/Controllers/: WindowController.cs
lab01/WindowManagerSingleton/Models/: Window.cs
lab01/WindowManagerSingleton/Properties/: launchSettings.json
lab01/WindowManagerSingleton/Services/: WindowManager.cs
lab01/WindowManagerSingleton/wwwroot/: index.html
lab02/: README.md
lab02/CompanyStructure/: CMakeLists.txt  Company.h  httplib.h  main.cpp
lab02/CompanyStructure/data/: Company.cpp
lab02/CompanyStructure/models/: Department.h  Employee.h
lab02/CompanyStructure/web/: index.html  script.js  style.css
lab02/CompositeCompanyStructure/: CMakeLists.txt  main.cpp
lab02/CompositeCompanyStructure/data/: Company.h
lab02/CompositeCompanyStructure/models/: CompanyComponent.h  Department.h  Employee.h
lab02/CompositeCompanyStructure/web/: index.html  script.js  style.css
lab03/: README.md
lab03/21_project/: config.py
lab03/21_project/game/: game.py  logic.py
lab03/21_project/ui/: button.py  panel.py
lab03/21_project_pattern/: config.py  main.py
lab03/21_project_pattern/game/: blackjack_round.py  game.py  logic.py  (+1 more)
(+1 files in other folders)
